base/hydra-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.20.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: hydra
  name: hydra
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.20.0 ()
      creationTimestamp: null
      labels:
        io.kompose.service: hydra
    spec:
      containers:
      - args:
        - serve
        - all
        - --dangerous-force-http
        image: oryd/hydra:v1.3.2
        name: hydra
        ports:
        - containerPort: 4444
        - containerPort: 4445
        - containerPort: 5555
        resources: {}
      restartPolicy: Always
  selector:
    matchLabels:
      io.kompose.service: hydra
status: {}
