base/hydra-migrate-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: hydra-migrate
  name: hydra-migrate
spec:
  containers:
  - args:
    - migrate
    - sql
    - -e
    - --yes
    image: oryd/hydra:v1.3.2
    name: hydra-migrate
    resources: {}
  restartPolicy: OnFailure
status: {}
