base/postgresd-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.20.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: postgresd
  name: postgresd
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.20.0 ()
      creationTimestamp: null
      labels:
        io.kompose.service: postgresd
    spec:
      containers:
      - env:
        - name: POSTGRES_DB
          value: hydra
        - name: POSTGRES_PASSWORD
          value: secret
        - name: POSTGRES_USER
          value: hydra
        image: postgres:9.6
        name: postgresd
        ports:
        - containerPort: 5432
        resources: {}
      restartPolicy: Always
  selector:
    matchLabels:
      io.kompose.service: postgresd
status: {}
