base/hydra-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.20.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: hydra
  name: hydra
spec:
  ports:
  - name: "4444"
    port: 4444
    targetPort: 4444
  - name: "4445"
    port: 4445
    targetPort: 4445
  - name: "5555"
    port: 5555
    targetPort: 5555
  selector:
    io.kompose.service: hydra
status:
  loadBalancer: {}
