base/istio-gateway-config.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: hydra-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 443
      name: https-default
      protocol: HTTPS
    hosts:
    - "*"
# The location of the certificate and the private key must be 
# /etc/istio/ingressgateway-certs, or the gateway will fail to load them.
    tls:
      mode: SIMPLE
      serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
      privateKey: /etc/istio/ingressgateway-certs/tls.key
